[package]
name = "jtypes_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
jtypes_core = { path = "../jtypes_core" }
proc-macro2 = "1.0.50"
syn = "1.0.107"
quote = "1.0.23"
